[gd_scene load_steps=8 format=3 uid="uid://p0bf7nva8lk3"]

[ext_resource type="Script" uid="uid://b0x6e17jk7mkl" path="res://Code/GameManager.gd" id="1_domw8"]
[ext_resource type="Script" uid="uid://cnggwwhegwyy" path="res://Code/WaveManager.gd" id="2_vw7ud"]
[ext_resource type="PackedScene" uid="uid://bs72ogkvdd7d6" path="res://Scenes/MainPlayer.tscn" id="3_fj29x"]
[ext_resource type="PackedScene" uid="uid://pbcm1rgyh5ba" path="res://Enemy/enemy.tscn" id="4_jdk38"]

[sub_resource type="BoxShape3D" id="BoxShape_1"]
size = Vector3(20, 0.2, 20)

[sub_resource type="PlaneMesh" id="PlaneMesh_ok7ah"]
size = Vector2(20, 20)

[sub_resource type="Environment" id="Environment_te47b"]
background_mode = 1
fog_enabled = true
fog_mode = 1
fog_light_color = Color(0.1, 0.1, 0.1, 1)
fog_density = 1.0
fog_depth_begin = 15.0
fog_depth_end = 50.0

[node name="Main" type="Node3D"]

[node name="Floor" type="StaticBody3D" parent="."]

[node name="Floor_CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape_1")

[node name="Floor_MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_ok7ah")

[node name="PlayerSpawn" type="Marker3D" parent="."]

[node name="EnemySpawn1" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 8)

[node name="EnemySpawn2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -8)

[node name="Main#DirectionalLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Main#AmbienceLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 2, -5)

[node name="Main#WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_te47b")

[node name="Main#Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 4, 10)
current = true

[node name="Main#AmbientSound1" type="AudioStreamPlayer3D" parent="."]

[node name="Main#AmbientSound2" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 10)

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="SettingsButton" type="Button" parent="UILayer"]
text = "Settings"

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_domw8")

[node name="WaveManager" type="Node" parent="."]
script = ExtResource("2_vw7ud")

[node name="Player" parent="." instance=ExtResource("3_fj29x")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="EnemyInstance1" parent="." instance=ExtResource("4_jdk38")]
